# plugport

./: .env.example  .gitignore  LICENSE  README.md  audit-log.md  checklist.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-find.ts  test-metrics.ts  tsconfig.json
.github/workflows/: ci.yml  deploy-docs.yml
contracts/: PlugPortStore.sol  README.md  package.json  tsconfig.json
demos/chat/: .env.example  package.json  tsconfig.json
demos/chat/src/: index.ts
demos/ecommerce/: .env.example  package.json
demos/ecommerce/src/: index.ts
deploy/docker/: Dockerfile  Dockerfile.dashboard  docker-compose.yml  prometheus.yml
deploy/docker/grafana/provisioning/datasources/: datasource.yml
deploy/k8s/: plugport.yaml
deploy/terraform/: main.tf
docs/: CNAME  docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
docs/docs/: architecture.md  faq.md  getting-started.md  migration-guide.md  monaddb-integration.md
docs/docs/api-reference/: http-api.md  query-operators.md  wire-protocol.md
docs/docs/guides/: configuration.md  deployment.md  docker.md  kubernetes.md  monitoring.md  vercel.md
docs/docs/sdks/: cli.md  go.md  nodejs.md  python.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
sdks/go/: go.mod  plugport.go
sdks/python/: pyproject.toml
sdks/python/plugport/: __init__.py  client.py  errors.py
sdks/python/tests/: test_client.py
tests/integration/: package.json
tests/integration/src/: compatibility.test.ts  integration.test.ts
tests/load/: crud-mix.js
